# agentic-job-hunting

./: .env.example  .gitignore  CLAUDE.md  OPEN_SOURCE_CHECKLIST.md  PLAN.md  README.md  RESUME_PIPELINE.md  SECURITY.md  pyproject.toml  test_e2e_approval.py  test_filter_scale.py  test_gpt4o_mini_comparison.py  test_resume_e2e.py  test_url_resume_e2e.py
.claude/: settings.local.json
data/: master_resume.example.yaml
research/: job_board_evaluation.md  resume_ai_pipeline.md  scraping_architecture.md  sprout_competitive_analysis.md
src/: config.py  db.py  logging.py  main.py  pipeline.py
src/bot/: listener.py
src/detection/: ashby.py  base.py  company_sync.py  fwddeploy.py  greenhouse.py  hackernews.py  lever.py  remoteok.py  remotive.py  scheduler.py  url_scraper.py  waas_auth.py  workatastartup.py
src/filter/: matcher.py
src/notify/: discord.py
src/resume/: __init__.py  ats.py  builder.py  compiler.py  selector.py  summarizer.py  types.py
templates/: resume.tex
tests/: test_resume_pipeline.py
